添加数据库文件及完善部分功能

--- a/interactive-class/class-generator/src/main/resources/gen.properties
+++ b/interactive-class/class-generator/src/main/resources/gen.properties
@@ -1,6 +1,6 @@
 #mysql数据库连接信息
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/interactive-class?useUnicode=true&serverTimezone=UTC
+jdbc.url=jdbc:mysql://localhost:3306/interactive_class?useUnicode=true&serverTimezone=UTC
 jdbc.user=root
 jdbc.pwd=
 #设置作者
