--- a/interactive-class/class-system/src/main/resources/config/application-local.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-local.yml
@@ -7,7 +7,7 @@ spring:
   mvc:
     throw-exception-if-no-handler-found: true #出现错误时，直接抛出异常,由spring 异常处理器拦截返回去json
   resources:
-    add-mappings: false #不要为我们工程中的资源文件建立映射
+    add-mappings: false #true,不要为我们工程中的资源文件建立映射
 
   jackson:
     #      日期格式化
@@ -30,10 +30,10 @@ spring:
 
   datasource:
     name: interactive
-    url: jdbc:mysql://localhost:3306/interactive-class?useUnicode=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/interactive_class?useUnicode=true&serverTimezone=UTC
     username: root
     password:
-    driver-class-name: com.mysql.jdbc.Driver
+#    driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
 
@@ -76,8 +76,9 @@ file:
   upload-dir: ./uploads
 #mybatis-plus配置
 mybatis-plus:
-  mapper-locations: classpath*:/mapper/*.xml
+  mapper-locations: classpath*:/mapper/*Mapper.xml
   configuration:
+    map-underscore-to-camel-case: true
     #打印SQL日志
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     # true,Mybatisplus中的selectMaps方法返回值字段为空显示
