--- a/interactive-class/class-system/pom.xml
+++ b/interactive-class/class-system/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
+
+        <!-- Shiro -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.1</version>
+        </dependency>
         <dependency>
             <groupId>com.code</groupId>
             <artifactId>class-core</artifactId>
