--- a/interactive-class/class-system/src/main/resources/config/application-test.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-test.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   mvc:
-    throw-exception-if-no-handler-found: true #出现错误时，直接抛出异常,由spring 异常处理器拦截返回去json
+    throw-exception-if-no-handler-found: false #出现错误时，直接抛出异常,由spring 异常处理器拦截返回去json
   resources:
     add-mappings: false #true,不要为我们工程中的资源文件建立映射
 
@@ -88,3 +88,12 @@ mybatis-plus:
 logging:
   level:
     com.code: debug
+
+system:
+  openTestEnv: true
+  shiro:
+    loginUrl: /login
+    doLoginUrl: /doLoginUrl
+    loginOutUrl: /loginOut
+    whiteUrl:  /test
+
