1.完善登录和获取用户信息 2. 初步添加websocket

--- a/interactive-class/class-system/src/main/resources/config/application-local.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-local.yml
@@ -93,7 +93,7 @@ logging:
 system:
   openTestEnv: true
   shiro:
-    loginUrl: /login
-    doLoginUrl: /doLoginUrl
-    loginOutUrl: /loginOut
+    loginUrl: /user/login
+    doLoginUrl: /user/doLoginUrl
+    loginOutUrl: /logout
     whiteUrl:  /druid
