--- a/interactive-class/class-system/src/main/resources/config/application-test.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-test.yml
@@ -92,8 +92,8 @@ logging:
 system:
   openTestEnv: false
   shiro:
-    loginUrl: /login
-    doLoginUrl: /doLoginUrl
-    loginOutUrl: /loginOut
-    whiteUrl:  /test
+    loginUrl: /user/login
+    doLoginUrl: /user/doLoginUrl
+    loginOutUrl: /logout
+    whiteUrl:  /druid
 
