--- a/interactive-class/class-system/pom.xml
+++ b/interactive-class/class-system/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>class-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+<!--        websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
