1.添加文件上传、下载接口

--- a/interactive-class/class-system/src/main/resources/config/application-local.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-local.yml
@@ -92,6 +92,9 @@ logging:
 #  openTestEnv 为true，开启开发环境，不校验token有效性
 system:
   openTestEnv: true
+#  文件下载位置
+  fileUpload:
+   url: ./../upload
   shiro:
     loginUrl: /user/login
     doLoginUrl: /user/doLoginUrl
