1.整理后端代码，将文件上传、shiro、websock移到common

--- a/interactive-class/class-system/src/main/resources/config/application-local.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-local.yml
@@ -94,7 +94,7 @@ system:
   openTestEnv: true
 #  文件下载位置
   fileUpload:
-   url: ./../upload
+   url: ./upload
   shiro:
     loginUrl: /user/login
     doLoginUrl: /user/doLoginUrl
