--- a/interactiveClassUI/src/manifest.json
+++ b/interactiveClassUI/src/manifest.json
@@ -58,6 +58,11 @@
 		"setting": {
 			"urlCheck": false
 		},
+		"permission": {
+			"scope.userLocation": {
+				"desc": "你的位置信息将用于小程序位置接口的效果展示" // 高速公路行驶持续后台定位
+			}
+		},
 		"usingComponents": true
 	},
 	"mp-alipay" : {
