--- a/interactive-class/class-system/src/main/resources/config/application-test.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-test.yml
@@ -88,13 +88,13 @@ system:
   openTestEnv: true
   #  文件下载位置
   fileUpload:
-    path: ./upload
+    path: ./upload/file/
     # 图片请求配置(springboot虚拟路径)
   img:
     #    图片请求url
     requestUrl: /img/**
     #    图片所在磁盘位置
-    uploadDir:  D://data//img/
+    uploadDir: ./upload/img/
   shiro:
     loginUrl: /user/login
     doLoginUrl: /user/doLoginUrl
