--- a/interactive-class/class-system/src/main/resources/config/application-local.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-local.yml
@@ -87,7 +87,7 @@ logging:
 
 #  openTestEnv 为true，开启开发环境，不校验token有效性
 system:
-  openTestEnv: true
+  openTestEnv: false
 #  文件下载位置
   fileUpload:
     path: ./upload/file/
