1.完善班级讨论功能

--- a/interactive-class/class-system/src/main/resources/config/application-local.yml
+++ b/interactive-class/class-system/src/main/resources/config/application-local.yml
@@ -100,5 +100,5 @@ system:
   shiro:
     loginUrl: /user/login
     doLoginUrl: /user/doLoginUrl
-    loginOutUrl: /logout
-    whiteUrl:  /druid
+    loginOutUrl: /user/logout
+    whiteUrl:  /druid, /
